fix(cta): fixed vertical alignment of arrow

--- a/elements/rh-cta/rh-cta.css
+++ b/elements/rh-cta/rh-cta.css
@@ -84,7 +84,7 @@ pf-icon {
 }
 
 svg {
-  vertical-align: middle;
+  vertical-align: baseline;
   margin-inline-start: var(--rh-space-md, 8px);
   margin-inline-end: calc(0px - (var(--rh-space-md, 8px) + var(--_arrow-size)));
   display: inline;
